--- a/estilos.css
+++ b/estilos.css
@@ -64,6 +64,7 @@ nav li a.active {
 
 /* Ajustar imagenes según resolución */
 img {
+  border: 1px solid #ccc;
   display: block;
   max-width: 100%;
   height: auto;
