--- a/estilos.css
+++ b/estilos.css
@@ -19,20 +19,20 @@ header {
   height: auto; /* Ajustar altura automáticamente */
 }
 
-.skew-menu{
+nav{
   text-align:center;
   margin-top:9em;
 }
 
-.skew-menu ul{
+nav ul{
   display:inline-block;
   margin:0;
   padding:0;
   list-style:none;
-  transform:skew(-@skew);
+  transform:nav(-@nav);
 }
 
-.skew-menu ul li{
+nav ul li{
   background:#fff;
   float:left;
   border-right:1px solid #eee;
@@ -61,7 +61,7 @@ header {
     padding:1em 2em;
     color:inherit;
     text-decoration:none;
-    transform:skew(@skew);
+    transform:nav(@skew);
   }
 }
 
