--- a/estilos.css
+++ b/estilos.css
@@ -25,6 +25,7 @@ header {
 .menu{
   text-align:center;
   margin-top:9em;
+  max-width: 100%;
 }
 
 .menu ul{
@@ -33,6 +34,8 @@ header {
   padding:0;
   list-style:none;
   transform:skew(-@skew);
+  max-height: 50px; /* Agregar altura máxima */
+  overflow: auto; /* Agregar barra de desplazamiento vertical */
 }
 
 .menu ul li{
@@ -65,6 +68,7 @@ header {
     color:inherit;
     text-decoration:none;
     transform:skew(@skew);
+    white-space: nowrap; /* Evitar división en varias líneas */
   }
 }
 
