--- a/estilos.css
+++ b/estilos.css
@@ -124,7 +124,6 @@ p {
 
   nav {
     width: 100%;
-    max-width: none;
   }
 
   nav ul {
@@ -140,7 +139,7 @@ p {
     border-bottom: none;
   }
 
-  nav li:last-child {
+  nav u1 li:last-child {
     margin-bottom: 0;
   }
 
