--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,3 @@
-@radius: 7px;
-@skew: 25deg;
-@main-color: #013566;
-
 body {
   background-color: #f2f2f2;
   font-family: Arial, sans-serif;
@@ -13,81 +9,59 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
-  flex-wrap: wrap; /* Agregar regla para que los elementos se ajusten a una nueva línea */
+  padding: 8px;
 }
 
 #logo {
-  width: 150px; /* Ancho máximo para la imagen */
-  height: auto; /* Ajustar altura automáticamente */
+  width: 15vw;
+  height: auto;
 }
 
-.menu{
-  text-align:center;
-  margin-top:9em;
-  max-width: 100%;
+nav {
+  display: flex;
+  width: 100%;
+  max-width: 400px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
-.menu ul{
-  display:inline-block;
-  margin:0;
-  padding:0;
-  list-style:none;
-  transform:skew(-@skew);
-  max-height: 50px; /* Agregar altura máxima */
-  overflow: auto; /* Agregar barra de desplazamiento vertical */
+nav ul {
+  list-style: none;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
 }
 
-.menu ul li{
-  background:#fff;
-  float:left;
-  border-right:1px solid #eee;
-  box-shadow:0 1px 1px rgba(0,0,0,0.1);
-  text-transform:uppercase;
-  color:#555;
-  font-weight:bolder;
-  transition:all 0.3s linear;
-  
-  &:first-child{
-    border-radius:@radius 0 0 @radius;
-  }
-  
-  &:last-child{
-    border-right:none;
-    border-radius:0 @radius @radius 0;
-  }
-  
-  &:hover{
-    background:#eee;
-    color:@main-color;
-  }
-  
-  a{
-    display:block;
-    padding:1em 2em;
-    color:inherit;
-    text-decoration:none;
-    transform:skew(@skew);
-    white-space: nowrap; /* Evitar división en varias líneas */
-  }
+nav li {
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+nav li a {
+  display: flex;
+  text-decoration: none;
+  color: #333;
+}
+
+nav li a.active {
+  color: #013566;
+  font-weight: bold;
 }
 
 .main {
-  margin: 10px 0;
+  margin: 48px 0;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
 
-/* Ajustar imagenes según resolución */
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
 article {
-  padding: 10px;
+  padding: 20px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -103,6 +77,11 @@ footer {
   color: #fff;
   padding: 16px;
   text-align: center;
+}
+
+footer p {
+  margin: 0;
+  font-size: 16px;
 }
 
 p {
