--- a/estilos.css
+++ b/estilos.css
@@ -102,7 +102,7 @@ p {
 @media screen and (max-width: 1080px) {
 
   header {
-    font-size: 20px%;
+    font-size: 20px;
     padding: 4px;
   }
 
