--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 4px;
+  padding: 8px;
 }
 
 #logo {
@@ -27,7 +27,6 @@ nav {
   background-color: #013566;
   display: flex;
   width: 100%;
-  max-width: 400px;
   padding: 10px;
   box-sizing: border-box;
 }
@@ -67,6 +66,7 @@ nav li a.active {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  flex-direction: column;
 }
 
 article {
