--- a/estilos.css
+++ b/estilos.css
@@ -27,6 +27,7 @@ nav {
   background-color: #fff;
   display: flex;
   width: 100%;
+  margin: auto;
   padding: 10px;
   box-sizing: border-box;
 }
@@ -34,7 +35,7 @@ nav {
 nav ul {
   list-style: none;
   width: 100%;
-  margin: 0;
+  margin: auto;
   padding: 0;
   display: flex;
   align-items: center;
@@ -94,6 +95,7 @@ footer p {
 }
 
 p {
+  margin: auto;
   text-align: justify;
 }
 
