--- a/estilos.css
+++ b/estilos.css
@@ -30,7 +30,7 @@ nav {
   background-color: #fff;
   display: flex;
   width: 100%;
-  padding: 20%;
+  padding: 10px 20% 10px 20%;
   box-sizing: border-box;
 }
 
