--- a/estilos.css
+++ b/estilos.css
@@ -30,7 +30,7 @@ nav {
   background-color: #fff;
   display: flex;
   width: 100%;
-  padding: 10px 20% 10px 20%;
+  padding: 10px;
   box-sizing: border-box;
 }
 
@@ -39,6 +39,7 @@ nav ul {
   width: 100%;
   padding: 0;
   display: flex;
+  padding: 10px 20% 10px 20%;
   align-items: center;
 }
 
