--- a/estilos.css
+++ b/estilos.css
@@ -5,7 +5,6 @@ html {
 body {
   background-color: #f2f2f2;
   line-height: 1.2;
-  margin-bottom: 10px;
   width: 100%;
   font-family: Arial, sans-serif;
 }
@@ -16,6 +15,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.titulo {
+	font-size: 24px;
+	padding: 20px 0;
 }
 
 #logo {
