--- a/estilos.css
+++ b/estilos.css
@@ -101,34 +101,13 @@ p {
   
   nav {
     width: 100%;
-  }
-
-  nav ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4px 0;
-  }
+    padding: 8px 0;
+    border-bottom: none;idth: 100%;
+ }
 
-  nav li {
-    width: 100%;
-    margin: 4px 0;
-    border-bottom: none;
-  }
-
-  nav u1 li:last-child {
-    margin-bottom: 0;
-  }
-
-  nav li a {
-    padding: 8px;
-  }
-
-  nav .icon {
-    display: block;
-    cursor: pointer;
-  }
-  
   article {
    padding: 10px;
   }
