--- a/estilos.css
+++ b/estilos.css
@@ -50,6 +50,13 @@ nav li {
   border-bottom: 1px solid #ddd;
 }
 
+/* Referencias con letra normal */
+nav li a {
+  color: #333;
+  text-decoration: none;
+  font-weight: normal;
+}
+
 article {
   padding: 20px 10% 3px 10%;
   width: 100%;
