--- a/estilos.css
+++ b/estilos.css
@@ -15,6 +15,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #logo {
