--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 5px 25px;
   width: 100%;
   box-sizing: border-box;
 }
