--- a/estilos.css
+++ b/estilos.css
@@ -45,7 +45,7 @@ nav li {
   border: 1px solid #ddd;
   border-radius: 4px;
   width: 100%;
-  padding 10px;
+  padding: 10px;
   border-bottom: 1px solid #ddd;
 }
 
