--- a/estilos.css
+++ b/estilos.css
@@ -112,7 +112,7 @@ p {
     flex-direction: column;
     align-items: center;
     padding: 8px 0;
-    border-bottom: none;idth: 100%;
+    border-bottom: none;
  }
 
   article {
