--- a/estilos.css
+++ b/estilos.css
@@ -32,6 +32,7 @@ nav {
   background-color: #fff;
   display: flex;
   width: 100%;
+  justify-content: center;
   box-sizing: border-box;
 }
 
@@ -39,6 +40,7 @@ nav ul {
   list-style: none;
   width: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -53,6 +55,8 @@ nav li {
 /* Referencias con letra normal */
 nav li a {
   color: #333;
+  width: auto;
+  padding: 10px;
   text-decoration: none;
   font-weight: normal;
 }
