--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@ body {
   background-color: #f2f2f2;
   line-height: 1.2;
   width: 100%;
+  max-width: 100%;
   margin: 0;
   font-family: Arial, sans-serif;
   font-size: 25px;
