--- a/estilos.css
+++ b/estilos.css
@@ -50,6 +50,7 @@ nav li {
   border: 1px solid #ddd;
   border-radius: 4px;
   width: 100%;
+  max-width: 100%;
   padding: 10px;
   border-bottom: 1px solid #ddd;
 }
