--- a/estilos.css
+++ b/estilos.css
@@ -60,6 +60,7 @@ nav li a {
   color: #333;
   width: auto;
   padding: 10px;
+  max-width: 100%;
   text-decoration: none;
   font-weight: normal;
 }
