--- a/estilos.css
+++ b/estilos.css
@@ -122,6 +122,8 @@ p {
     flex-direction: column;
     align-items: center;
     padding: 8px 0;
+    overflow-x: auto;
+    white-space: nowrap;
     border-bottom: none;
  }
 
